// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelayPage:  should render 1`] = `
<Page
  empty={Object {}}
  title="Delay Report"
>
  <withRouter(Connect(ReportOptions)) />
  <Connect(MetricsSummary)
    rateTitle="Delayed Rate"
    rateValue={0.1}
    secondaryMessage="There were 1,000 total delays in this time period. (Note: messages may be delayed multiple times)"
  >
    <strong>
      10
    </strong>
     of 
    <strong>
      10,000
    </strong>
     accepted messages were delayed on first attempt
  </Connect(MetricsSummary)>
  <Panel
    className="ReasonsTable"
    title="Delayed Messages"
  >
    <DelaysDataTable
      addFilters={[MockFunction]}
      rows={
        Array [
          Object {
            "count_delayed": 100,
            "count_delayed_first": 1,
            "reason": "my reason",
          },
        ]
      }
      totalAccepted={1000}
    />
  </Panel>
</Page>
`;

exports[`DelayPage:  should show loading indicator when loading table 1`] = `
<Page
  empty={Object {}}
  title="Delay Report"
>
  <withRouter(Connect(ReportOptions))
    reportLoading={true}
  />
  <Connect(MetricsSummary)
    rateTitle="Delayed Rate"
    rateValue={0.1}
    secondaryMessage="There were 1,000 total delays in this time period. (Note: messages may be delayed multiple times)"
  >
    <strong>
      10
    </strong>
     of 
    <strong>
      10,000
    </strong>
     accepted messages were delayed on first attempt
  </Connect(MetricsSummary)>
  <Panel
    className="ReasonsTable"
    title="Delayed Messages"
  >
    <PanelLoading
      minHeight="400px"
    />
  </Panel>
</Page>
`;

exports[`DelayPage:  should show loading panel when aggregates are still loading 1`] = `
<Page
  empty={Object {}}
  title="Delay Report"
>
  <withRouter(Connect(ReportOptions)) />
  <PanelLoading
    minHeight="115px"
  />
  <Panel
    className="ReasonsTable"
    title="Delayed Messages"
  >
    <DelaysDataTable
      addFilters={[MockFunction]}
      rows={
        Array [
          Object {
            "count_delayed": 100,
            "count_delayed_first": 1,
            "reason": "my reason",
          },
        ]
      }
      totalAccepted={1000}
    />
  </Panel>
</Page>
`;
